

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.ualberta.cmput301.t03.user.FriendsListFragment">
    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/friendsListSwipeLayout">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/friendsListListView"
            android:layout_gravity="center"
            android:choiceMode="singleChoice"
            tools:listitem="@android:layout/simple_list_item_1" />

        <!--cool experiment -->
        <!--<android.support.v7.widget.RecyclerView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/friendsListRecyclerView"-->
            <!--android:layout_gravity="center"-->
            <!--android:choiceMode="singleChoice"-->
            <!--tools:listitem="@android:layout/simple_list_item_1" />-->
    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFriendFab"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_white_24dp"/>
</FrameLayout>
