<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.ualberta.cmput301.t03.inventory.BrowseInventoryFragment">

    <!--&lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
    <!--<TextView android:layout_width="match_parent" android:layout_height="match_parent"-->
        <!--android:text="I AM BROWSE" />-->

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/browseListSwipeLayout">
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/BrowseListView"
            android:layout_gravity="center_horizontal|top"
            tools:listitem="@layout/fragment_item_tile"
            android:clickable="true"/>
    </android.support.v4.widget.SwipeRefreshLayout>


</FrameLayout>
