...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/userInventorySwipeLayout">
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/InventoryListView"
            android:layout_gravity="center_horizontal|top"
            tools:listitem="@layout/fragment_item_tile" />
    </android.support.v4.widget.SwipeRefreshLayout>


    <android.support.design.widget.FloatingActionButton
...
