<resources>
    <string name="app_name">Trading Post</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_initialize_user">Welcome to Trading Post!</string>
    <string name="title_activity_trade_offer_compose">Compose a Trade</string>
    <string name="title_activity_trade_offer_review">Review Trade</string>
    <string name="title_activity_trade_offer_history">Trade History</string>
...
    <string name="username">myUsername</string>

    <!--Navbar titles for drawer fragments-->
    <string name="inventoryTitle">Inventory</string>
    <string name="browseTitle">Browse</string>
    <string name="tradeTitle">Trades</string>
    <string name="friendsTitle">Friends</string>
    <string name="editProfileTitle">My Profile</string>
    <string name="topTradersTitle">Top Traders</string>

    <!--Configuration strings-->
    <string name="configurationOfflineMode">Offline Mode</string>
    <string name="configurationDownloadImages">Automatically download images</string>
...
